Добавлен метод и файл для формы

--- a/Stellar/index.html
+++ b/Stellar/index.html
@@ -342,7 +342,7 @@
 				<div class="col-md-4 offset-md-1 col-sm-8 offset-sm-2 col-10 offset-1">
 					<div class="form" id="form">
 						<h4 class="form-title">Отправьте заявку <br> и Мы свяжемся с Вами!</h4>
-						<form action="#" method="#">
+						<form action="telegram.php" method="POST">
 							<label for="#">Ваше имя<sup>*</sup></label>
 							<input type="text" name="user_name" placeholder="Александр" required pattern="[а-яА-Я]+" title="Поле должно содержать только русские буквы">
 							<label for="#">Ваш номер<sup>*</sup></label>
