--- a/Stellar/index.html
+++ b/Stellar/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Stellar</title>
-	<link rel="icon" href="img/favicon.ico" sizes="32x32">
+	<link rel="icon" href="img/favicon.ico" sizes="16x16">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@200;400;600;800&display=swap" rel="stylesheet">
@@ -344,11 +344,11 @@
 					<div class="form" id="form">
 						<h4 class="form-title">Отправьте заявку <br> и Мы свяжемся с Вами!</h4>
 						<form action="telegram.php" method="POST">
-							<label for="#">Ваше имя<sup>*</sup></label>
+							<label for="user_name">Ваше имя<sup>*</sup></label>
 							<input type="text" name="user_name" placeholder="Александр" required pattern="[а-яА-Я]+" title="Поле должно содержать только русские буквы">
-							<label for="#">Ваш номер<sup>*</sup></label>
+							<label for="user_phone">Ваш номер<sup>*</sup></label>
 							<input type="number" name="user_phone" placeholder="8 999 999 99 99" required>
-							<label for="#">Ваш e-mail</label>
+							<label for="user_email">Ваш e-mail</label>
 							<input type="email" name="user_email" placeholder="sales@stellar-pro.org">
 							<button class="all-btn" type="submit">Отправить</button>
 						</form>
