--- a/Stellar/index.html
+++ b/Stellar/index.html
@@ -8,6 +8,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@200;400;600;800&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/uicons-solid-rounded.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/uicons-brands.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -17,7 +18,7 @@
 
 <!-- Навигация -->
 	
-	<nav class="nav">
+	<nav class="nav wow fadeInDown">
 		<div class="container">
 			<div class="row">
 		
@@ -68,13 +69,13 @@
 
 			<div class="section-header">
 				<div class="row">
-					<h1 class="main-title col-xl-8 offset-xl-2">
+					<h1 class="main-title col-xl-8 offset-xl-2 wow slideInDown ">
 						Как создать доходную систему?
 						Вариантов много <br> Лучших из них - единицы!
 					</h1>
 				</div>
 				<div class="row">
-					<p class="main-sub_title col-xl-8 offset-xl-2">
+					<p class="main-sub_title col-xl-8 offset-xl-2 wow slideInDown ">
 						Начни строить cвой капитал <br>
 						Оптимизируй свои расходы <br>
 						Научись работать с кредитованием <br>
@@ -130,28 +131,28 @@
 
 			<div class="row">
 
-				<div class="col-lg-3 offset-lg-0 col-md-6 offset-md-0 col-sm-5 col-xs-10 offset-xs-0 offset-xs-0 text-center">
+				<div class="col-lg-3 offset-lg-0 col-md-6 offset-md-0 col-sm-5 col-xs-10 offset-xs-0 offset-xs-0 text-center wow fadeIn">
 					<div class="features-block">
 						<img src="img/features/managers.svg" alt="Личный менеджер" class="features-block-img">
 						<h3 class="features-block-title">Персонального менеджера проекта</h3>
 					</div>
 				</div>
 
-				<div class="col-lg-3 offset-lg-0 col-md-6 offset-md-0 col-sm-5 offset-sm-2 col-xs-12 offset-xs-0 text-center">
+				<div class="col-lg-3 offset-lg-0 col-md-6 offset-md-0 col-sm-5 offset-sm-2 col-xs-12 offset-xs-0 text-center wow fadeIn">
 					<div class="features-block">
 						<img src="img/features/access.svg" alt="Доступ к сервисам" class="features-block-img">
 						<h3 class="features-block-title">Доступ к сервисам и партнерам</h3>
 					</div>
 				</div>
 
-				<div class="col-lg-3 offset-lg-0 col-md-6 offset-md-0 col-sm-5 col-xs-12 offset-xs-0 text-center">
+				<div class="col-lg-3 offset-lg-0 col-md-6 offset-md-0 col-sm-5 col-xs-12 offset-xs-0 text-center wow fadeIn">
 					<div class="features-block">
 						<img src="img/features/strategies.svg" alt="Три доходные стратегии" class="features-block-img">
 						<h3 class="features-block-title">Индивидуальную доходную систему</h3>
 					</div>
 				</div>
 
-				<div class="col-lg-3 offset-lg-0 col-md-6 offset-md-0 col-sm-5 offset-sm-2 col-xs-12 offset-xs-0 text-center">
+				<div class="col-lg-3 offset-lg-0 col-md-6 offset-md-0 col-sm-5 offset-sm-2 col-xs-12 offset-xs-0 text-center wow fadeIn">
 					<div class="features-block">
 						<img src="img/features/decision.svg" alt="Решения" class="features-block-img">
 						<h3 class="features-block-title">Сопровождение до результата</h3>
@@ -258,7 +259,7 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row wow fadeInLeft">
 				<div class="col-2">
 					<p class="stat-years">2019</p>
 				</div>
@@ -273,7 +274,7 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row wow fadeInLeft">
 				<div class="col-2">
 					<p class="stat-years">2020</p>
 				</div>
@@ -288,7 +289,7 @@
 				</div>
 			</div>
 
-			<div class="row">
+			<div class="row wow fadeInLeft">
 				<div class="col-2">
 					<p class="stat-years">2021</p>
 				</div>
@@ -303,11 +304,11 @@
 				</div>			
 			</div>
 
-			<div class="row">
+			<div class="row wow fadeInLeft">
 				<div class="col-2">
 					<p class="stat-years">2022</p>
 				</div>
-				<div class="col-10">
+				<div class="col-10 wow fadeInLeftBig">
 					<p>Официальный запуск Компании Stellar</p>
 				</div>			
 			</div>
@@ -338,7 +339,7 @@
 				</div>
 
 				<div class="col-5 offset-2">
-					<div class="form">
+					<div class="form wow flipInX">
 						<h4 class="form-title">Отправьте заявку <br> и Мы свяжемся с Вами!</h4>
 						<form action="telegram.php" method="POST">
 							<label for="user_name">Ваше имя<sup>*</sup></label>
@@ -432,7 +433,7 @@
 			</div> -->
 
 		</div>
-		<div class="map" id="wrapMap">
+		<div class="map wow fadeInRight" id="wrapMap">
 				<iframe style="pointer-events: none;" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afcc35f1a09ec5b14db96225ab72de66f9472fe3943fe58ec95fd29127407b291&amp;source=constructor" width="100%" height="100%" frameborder="0"></iframe>
 			</div>
 	</section>
@@ -466,6 +467,11 @@
 		</div>
 	</footer>
 
+<!-- Подключение анимации -->
+	<script src="js/wow.min.js"></script>
+	<script>
+		new WOW().init();
+	</script>
 
 <!-- Подключение стилей слайдера слик -->
 	<link rel="stylesheet" href="slick/slick.css">
