--- a/Stellar/index.html
+++ b/Stellar/index.html
@@ -202,7 +202,7 @@
 			<div class="row">
 				
 				<div class="col-xl-4 col-sm-4 col-xs-12">
-					<div class="rates-block">
+					<div class="rates-block wow bounceIn">
 						<img src="img/logo-white.png" alt="">
 						<h3>Доходная недвижимость</h3>
 						<p>Ежемесячный доход <br>Доход с купли/продажи</p>
@@ -211,7 +211,7 @@
 				</div>
 
 				<div class="col-xl-4 col-sm-4 col-xs-12">
-					<div class="rates-block">
+					<div class="rates-block wow bounceIn">
 						<img src="img/logo-silver.png" alt="">
 						<h3>Оптимизация</h3>
 						<p>Сократить расходы<br>Увеличить доход от вложений</p>
@@ -220,7 +220,7 @@
 				</div>
 
 				<div class="col-xl-4 col-sm-4 col-xs-12">
-					<div class="rates-block">
+					<div class="rates-block wow bounceIn">
 						<img src="img/logo-gold.png" alt="">
 						<h3>Сопровождение</h3>
 						<p>Лечение кредитной истории <br>Переговоры с финансовыми организациями</p>
@@ -339,7 +339,7 @@
 				</div>
 
 				<div class="col-5 offset-2">
-					<div class="form wow flipInX">
+					<div class="form wow flipInX" data-wow-duration="2s" data-wow-delay="0.2s">
 						<h4 class="form-title">Отправьте заявку <br> и Мы свяжемся с Вами!</h4>
 						<form action="telegram.php" method="POST">
 							<label for="user_name">Ваше имя<sup>*</sup></label>
@@ -380,62 +380,19 @@
 						<p class="contacts-txt"><strong><i class="fi fi-sr-envelope-download"></i>E-mail:</strong> <br><span class="contacts-txt-right"><a href="mailto:sales@stellar-pro.org">sales@stellar-pro.org</a></span></p>
 
 						<p class="contacts-txt"><strong><i class="fi fi-brands-vk"></i>Мы ВКонтакте:</strong> <br>
-							<span class="contacts-txt-right"><a href="">Иван</a></span> <br>
-							<span class="contacts-txt-right"><a href="">Андрей</a></span></p>
+							<span class="contacts-txt-right"><a href="">Иван Панов</a></span> <br>
+							<span class="contacts-txt-right"><a href="">Андрей Липатов</a></span></p>
 
 						<p class="contacts-txt"><strong><i class="fi fi-brands-youtube"></i>Мы на </strong><a href="">YouTube</a></p>
 
 				</div>
 			</div>
-			
-
-			<!-- <div class="row">
-				<div class="col-md-7 col-sm-12">
-					<div class="row">
-						<p class="col-md-4 col-12"><strong>Адрес офиса:</strong> <br> Екатеринбург, Переулок Химиков 3 <br> 3 этаж, офис 303
-						</p>
-						<p class="col-md-4 col-12"><strong>Номер телефона:</strong> <br><a href="tel:+79992867463">+ 7 (999) 286 74 63</a></p>
-						<p class="col-md-4 col-12"><strong>E-mail:</strong> <br><a href="mailto:sales@stellar-pro.org">sales@stellar-pro.org</a></p>
-					</div>
-
-					<div class="row social">
-						<div class="col-lg-4">
-							<p>Мы на <a href="https://www.youtube.com/@stellar-pro" class="contact-link">Youtube</a></p>
-						</div>
-						<div class="col-lg-4">
-							<p>Мы ВКонтакте:</p> <br>
-							<a href="vk.com/panov_money_vk" class="contact-link vk">Иван</a> <br>
-							<a href="vk.com/lipatov_money_vk" class="contact-link vk">Андрей</a>
-						</div>
-					</div>
-
-					<div class="map">
-						<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Afcc35f1a09ec5b14db96225ab72de66f9472fe3943fe58ec95fd29127407b291&amp;width=100%25&amp;height=350&amp;lang=ru_RU&amp;scroll=false"></script>
-					</div>
-					
-
-				</div>
-
-				<div class="col-md-4 offset-md-1 col-sm-8 offset-sm-2 col-10 offset-1">
-					<div class="form" id="form">
-						<h4 class="form-title">Отправьте заявку <br> и Мы свяжемся с Вами!</h4>
-						<form action="telegram.php" method="POST">
-							<label for="user_name">Ваше имя<sup>*</sup></label>
-							<input type="text" name="user_name" placeholder="Александр" required pattern="[а-яА-Я]+" title="Поле должно содержать только русские буквы">
-							<label for="user_phone">Ваш номер<sup>*</sup></label>
-							<input type="number" name="user_phone" placeholder="8 999 999 99 99" required>
-							<label for="user_email">Ваш e-mail</label>
-							<input type="email" name="user_email" placeholder="sales@stellar-pro.org">
-							<button class="all-btn" type="submit">Отправить</button>
-						</form>
-					</div>
-				</div>
-			</div> -->
 
 		</div>
-		<div class="map wow fadeInRight" id="wrapMap">
-				<iframe style="pointer-events: none;" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afcc35f1a09ec5b14db96225ab72de66f9472fe3943fe58ec95fd29127407b291&amp;source=constructor" width="100%" height="100%" frameborder="0"></iframe>
-			</div>
+		<div class="map wow fadeInRight" data-wow-duration="2s" data-wow-delay="0.2s" id="wrapMap">
+			<iframe style="pointer-events: none;" src="https://yandex.ru/map-widget/v1/?um=constructor%3Afcc35f1a09ec5b14db96225ab72de66f9472fe3943fe58ec95fd29127407b291&amp;source=constructor" width="100%" height="100%" frameborder="0">
+			</iframe>
+		</div>
 	</section>
 
 
