--- a/Stellar/index.html
+++ b/Stellar/index.html
@@ -101,14 +101,13 @@
 				<div class="row">
 					<div class="col-xl-7 offset-xl-5 col-md-12">	
 						<p class="sub-title">Stellar - это экосистема из инструментов, стратегий и партнеров для решения задач Клиента по увеличению капитала.</p>
-						<p class="sub-title">Какие инструменты мы используем?</p>
-						<p class="sub-title">
-							Операции с недвижимостью
-							Оптимизация финансовой нагрузки
-							Потребительское и ипотечное кредитования
-							Помощь в восстановлении кредитной истории
-							Содействие в сложных переговорах.
-						</p>
+						<p class="sub-title text-center">Какие инструменты мы используем?</p>
+						<p class="sub-title_lite"><i class="fi fi-sr-city"></i>Операции с недвижимостью</p>
+						<p class="sub-title_lite"><i class="fi fi-sr-file-invoice-dollar"></i>Оптимизация финансовой нагрузки</p>
+						<p class="sub-title_lite"><i class="fi fi-sr-money-check-edit"></i>Потребительское и ипотечное кредитования</p>
+						<p class="sub-title_lite"><i class="fi fi-sr-memo-circle-check"></i>Помощь в восстановлении кредитной истории</p>
+						<p class="sub-title_lite"><i class="fi fi-sr-users-alt"></i>Содействие в сложных переговорах</p>
+						
 					</div>
 				</div>
 				<div class="col-xl-2 offset-xl-8 col-lg-2 offset-lg-5 text-center">
@@ -318,7 +317,7 @@
 
 <!-- Шестая секция Форма -->
 
-	<section class="forms" id="form">
+	<section class="forms">
 		<div class="container">
 
 			<div class="row text-center">
@@ -328,7 +327,7 @@
 					<a class="flamp-widget" href="//ekaterinburg.flamp.ru/firm/stellar_agentstvo_nedvizhimosti_ooo_stellar-70000001061388919"  data-flamp-widget-type="responsive-new" data-flamp-widget-id="70000001061388919" data-flamp-widget-width="100%" data-flamp-widget-count="1">Отзывы о нас на Флампе</a><script>!function(d,s){var js,fjs=d.getElementsByTagName(s)[0];js=d.createElement(s);js.async=1;js.src="//widget.flamp.ru/loader.js";fjs.parentNode.insertBefore(js,fjs);}(document,"script");</script>
 				</div>
 
-				<div class="col-lg-5 offset-lg-2 col-sm-8 offset-sm-2 col-10 offset-1">
+				<div class="col-lg-5 offset-lg-2 col-sm-8 offset-sm-2 col-10 offset-1" id="form">
 					<h2 class="title">Готов начать?</h2>
 					<div class="form wow flipInX" data-wow-duration="2s" data-wow-delay="0.2s">
 						<h4 class="form-title">Отправьте заявку <br> и Мы свяжемся с Вами!</h4>
@@ -349,15 +348,12 @@
 		</div>
 	</section>
 
-
-
 <!-- Седьмая секция Контакты -->
 
 	<section class="contacts" id="contacts">
 		<div class="container">
 
 			<div class="section-header">
-				<!-- <h2 class="title">Готов начать?</h2> -->
 				<p class="sub-title">Наши контакты:</p>
 			</div>
 
@@ -371,10 +367,10 @@
 						<p class="contacts-txt"><strong><i class="fi fi-sr-envelope-download"></i>E-mail:</strong> <br><span class="contacts-txt-right"><a href="mailto:sales@stellar-pro.org">sales@stellar-pro.org</a></span></p>
 
 						<p class="contacts-txt"><strong><i class="fi fi-brands-vk"></i>Мы ВКонтакте:</strong> <br>
-							<span class="contacts-txt-right"><a href="">Иван Панов</a></span> <br>
-							<span class="contacts-txt-right"><a href="">Андрей Липатов</a></span></p>
+							<span class="contacts-txt-right"><a href="https://vk.com/panov_money_vk">Иван Панов</a></span> <br>
+							<span class="contacts-txt-right"><a href="https://vk.com/lipatov_money_vk">Андрей Липатов</a></span></p>
 
-						<p class="contacts-txt"><strong><i class="fi fi-brands-youtube"></i>Мы на </strong><a href="">YouTube</a></p>
+						<p class="contacts-txt"><strong><i class="fi fi-brands-youtube"></i>Мы на </strong><a href="https://youtube.com/@stellar-pro">YouTube</a></p>
 
 				</div>
 			</div>
@@ -385,7 +381,6 @@
 			</iframe>
 		</div>
 	</section>
-
 
 <!-- Футер -->
 	
