--- a/Stellar/index.html
+++ b/Stellar/index.html
@@ -205,7 +205,7 @@
 						<img src="img/logo-white.png" alt="">
 						<h3>Доходная недвижимость</h3>
 						<p>Ежемесячный доход <br>Доход с купли/продажи</p>
-						<button class="all-btn"><a href="#form">Выбрать</a></button>
+						<a class="all-btn" href="#form">Выбрать</a>
 					</div>
 				</div>
 
@@ -214,7 +214,7 @@
 						<img src="img/logo-silver.png" alt="">
 						<h3>Оптимизация</h3>
 						<p>Сократить расходы<br>Увеличить доход от вложений</p>
-						<button class="all-btn"><a href="#form">Выбрать</a></button>
+						<a class="all-btn" href="#form">Выбрать</a>
 					</div>
 				</div>
 
@@ -223,7 +223,7 @@
 						<img src="img/logo-gold.png" alt="">
 						<h3>Сопровождение</h3>
 						<p>Лечение кредитной истории <br>Переговоры с фин. организациями</p>
-						<button class="all-btn"><a href="#form">Выбрать</a></button>
+						<a class="all-btn" href="#form">Выбрать</a>
 					</div>
 				</div>
 
