--- a/Stellar/index.html
+++ b/Stellar/index.html
@@ -329,7 +329,7 @@
 
 				<div class="col-lg-5 offset-lg-2 col-sm-8 offset-sm-2 col-10 offset-1" id="form">
 					<h2 class="title">Готов начать?</h2>
-					<div class="form wow flipInX" data-wow-duration="2s" data-wow-delay="0.2s">
+					<div class="form wow bounceInRight" data-wow-duration="2s" data-wow-delay="0.2s">
 						<h4 class="form-title">Отправьте заявку <br> и Мы свяжемся с Вами!</h4>
 						<form action="telegram.php" method="POST">
 							<label for="user_name">Ваше имя<sup>*</sup></label>
