--- a/Stellar/index.html
+++ b/Stellar/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Екатеринбург недвижимость, доходная недвижимость, ипотека, потребительское и ипотечное кредитования, помощь в восстановлении кредитной истории, доходная система"/>
+	<meta name="description" content="Екатеринбург недвижимость, доходная недвижимость, ипотека, потребительское и ипотечное кредитования, помощь в восстановлении кредитной истории, доходная система">
 	<title>Stellar</title>
 	<link rel="icon" href="img/favicon.ico" sizes="16x16">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
 				<div class="col-xl-1 col-md-2 col-sm-2 col-3">
 					<div class="logo">
 						<a href="#">
-							<img src="img/logo-white.png" alt="Логотип">
+							<img src="img/logo-white.webp" alt="Логотип">
 							<h2>Stellar</h2>
 						</a>
 					</div>
@@ -207,7 +207,7 @@
 				
 				<div class="col-xl-4 col-sm-4 col-xs-12">
 					<div class="rates-block wow bounceInUp" data-wow-delay="0.3s">
-						<img src="img/logo-white.png" alt="">
+						<img src="img/logo-white.webp" alt="">
 						<h3 class="wow fadeIn" data-wow-delay="1.8s">Доходная недвижимость</h3>
 						<p class="wow fadeIn" data-wow-delay="1.8s">Ежемесячный доход <br>Доход с купли/продажи</p>
 						<a class="all-btn wow fadeIn" href="#form" data-wow-delay="1.8s">Выбрать</a>
@@ -216,7 +216,7 @@
 
 				<div class="col-xl-4 col-sm-4 col-xs-12">
 					<div class="rates-block wow bounceInUp" data-wow-delay="0.6s">
-						<img src="img/logo-silver.png" alt="">
+						<img src="img/logo-silver.webp" alt="">
 						<h3 class="wow fadeIn" data-wow-delay="1.8s">Оптимизация</h3>
 						<p class="wow fadeIn" data-wow-delay="1.8s">Сократить расходы<br>Увеличить доход от вложений</p>
 						<a class="all-btn wow fadeIn" href="#form" data-wow-delay="1.8s">Выбрать</a>
@@ -225,7 +225,7 @@
 
 				<div class="col-xl-4 col-sm-4 col-xs-12">
 					<div class="rates-block wow bounceInUp" data-wow-delay="0.9s">
-						<img src="img/logo-gold.png" alt="">
+						<img src="img/logo-gold.webp" alt="">
 						<h3 class="wow fadeIn" data-wow-delay="1.8s">Сопровождение</h3>
 						<p class="wow fadeIn" data-wow-delay="1.8s">Лечение кредитной истории <br>Переговоры с фин. организациями</p>
 						<a class="all-btn wow fadeIn" href="#form" data-wow-delay="1.8s">Выбрать</a>
@@ -359,7 +359,7 @@
 		<div class="container">
 
 			<div class="section-header">
-				<p class="sub-title">Наши контакты:</p>
+				<h3 class="sub-title">Наши контакты:</h3>
 			</div>
 
 			<div class="row">
@@ -379,13 +379,13 @@
 
 								<div class="col-lg-6 col-12">
 									<div class="contacts__block-vk">
-										<a class="contacts__block-img-link" href="https://vk.com/panov_money_vk"><img src="img/ivan.png" alt="" class="contacts__block-img"></a><span class="contacts-txt-right"><a class="contacts-txt-right-link" href="https://vk.com/panov_money_vk">Иван&nbsp;Панов</a></span>
+										<a class="contacts__block-img-link" href="https://vk.com/panov_money_vk"><img src="img/ivan.webp" alt="" class="contacts__block-img"></a><span class="contacts-txt-right"><a class="contacts-txt-right-link" href="https://vk.com/panov_money_vk">Иван&nbsp;Панов</a></span>
 									</div>
 								</div>
 
 								<div class="col-lg-6 col-12">	
 									<div class="contacts__block-vk">
-										<a class="contacts__block-img-link" href="https://vk.com/lipatov_money_vk"><img src="img/andrey.png" alt="" class="contacts__block-img"></a><span class="contacts-txt-right"><a class="contacts-txt-right-link" href="https://vk.com/lipatov_money_vk">Андрей&nbsp;Липатов</a></span>
+										<a class="contacts__block-img-link" href="https://vk.com/lipatov_money_vk"><img src="img/andrey.webp" alt="" class="contacts__block-img"></a><span class="contacts-txt-right"><a class="contacts-txt-right-link" href="https://vk.com/lipatov_money_vk">Андрей&nbsp;Липатов</a></span>
 									</div>
 								</div>
 
@@ -405,16 +405,14 @@
 <!-- Футер -->
 	
 	<footer class="footer">
+
 		<div class="container">
 			<div class="row">
 				<div class="col-md-2 col-sm-3 col-12">
 					<p><a href="mailto:sales@stellar-pro.org">sales@stellar-pro.org</a></p>
 					<p><a href="tel:+79992867463">+7 (999) 286 74 63</a></p>
 				</div>
-				<!-- <div class="col-md-2 col-sm-3 col-12 text-center">
-					<p class="txt-s"><a href="http://stellar-pro.org/#">Оферта</a></p>
-					<p class="txt-s"><a href="http://stellar-pro.org/#">Политика конфиденциальности</a></p>
-				</div> -->
+			
 				<div class="col-md-2 col-sm-4 col-12 offset-sm-1 text-center">
 					<p class="txt-s"><a href="http://stellar-pro.org/docs/Informacionnaya_politika.pdf">Ведение деятельности</a></p>
 					<p class="txt-s"><a href="http://stellar-pro.org/docs/Informacionnaya_politika.pdf">Информационная политика</a></p>
@@ -427,7 +425,9 @@
 					<p>Дизайн и разработка сайта: <a href="https://vk.com/ziscander">Александр Шмик</a></p>
 					<p>Stellar <sup>©</sup>, 2023</p>
 				</div>
+			</div>
 		</div>
+
 	</footer>
 
 <!-- Подключение анимации -->
