--- a/vishivka/services.html
+++ b/vishivka/services.html
@@ -46,13 +46,13 @@
 	 			<div class="col-10 offset-1">
 	 				<ul class="nav-list">
 	 					<li class="nav-list-item">
- 							<a class="social-link social-link_active" href="index.html">Главная</a>
+ 							<a class="social-link" href="index.html">Главная</a>
  						</li>
  						<li class="nav-list-item">
 	 						<a class="social-link" href="about.html">О нас</a>
 	 					</li>
 	 					<li class="nav-list-item">
-	 						<a href="services.html" class="social-link">Услуги</a>
+	 						<a href="services.html" class="social-link social-link_active">Услуги</a>
 	 					</li>
 	 					<li class="nav-list-item">
 	 						<a href="portfolio.html" class="social-link">Наши работы</a>
@@ -70,30 +70,6 @@
 		</div>
 	</header>
 
-<!-- Первая секция Главная -->
-
-	<section class="main">
-		<div class="container">
-
-			<div class="row">
-
-				<div class="col-5">
-					<div class="main-wrapper">
-						<h1 class="main__header">Вышивка на заказ!</h1>
-						<p class="main__subtitle">По вашему макету или картинке!</p>
-					</div>
-				</div>
-
-				<div class="col-7">
-					<div class="main-logo">
-						<img src="img/logo.png" alt="логотип" class="main-logo-img">
-					</div>
-				</div>
-				
-			</div>
-
-		</div>
-	</section>
 
 
 
