--- a/vishivka/contacts.html
+++ b/vishivka/contacts.html
@@ -26,11 +26,11 @@
 		 			<div class="col-3 offset-7">
 		 				<div class="social">
 
-		 					<a class="social-link social-link__whatsapp" href="wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
+		 					<a class="social-link social-link__whatsapp" href="http://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
 
-		 					<a class="social-link social-link__vk" href="vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
+		 					<a class="social-link social-link__vk" href="http://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
 
-		 					<a class="social-link social-link__instagram" href="instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
+		 					<a class="social-link social-link__instagram" href="http://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
 
 		 					<a href="#" class="social-link social__btn">Заказать</a>
 
