--- a/vishivka/flex-flok.html
+++ b/vishivka/flex-flok.html
@@ -77,16 +77,16 @@
 			<h2 class="title">Услуги</h2>
 			<a href="index.html" class="title__link social-link">Главная</a>
 			<span class="title__link-defis">~</span>
-			<a href="services.html" class="title__link social-link">Вышивка</a>
+			<a href="flex-flok.html" class="title__link social-link">Печать флексом, флоком</a>
 		</div>
 		<div class="row">
 			<div class="col-3">
 				<ul class="services-list">
 					<li class="services-list-item">
-						<a href="services.html" class="social-link social-link_active services-list__link">Вышивка</a>
+						<a href="services.html" class="social-link services-list__link">Вышивка</a>
 					</li>
 					<li class="services-list-item">
-						<a href="flex-flok.html" class="social-link services-list__link">Печать флексом, флоком</a>
+						<a href="flex-flok.html" class="social-link services-list__link social-link_active">Печать флексом, флоком</a>
 					</li>
 					<li class="services-list-item">
 						<a href="sublimacion.html" class="social-link services-list__link">Сублимационная печать</a>
@@ -97,18 +97,31 @@
 				</ul>
 			</div>
 			<div class="col-8 offset-1">
-				<img class="right-img" src="img/vishivka.jpg" alt="Вышивка">
-				<h3 class="title title__right-block">Вышивка</h3>
+				<img class="right-img" src="img/flex.jpg" alt="Вышивка">
+				<h3 class="title title__right-block">Печать флексом, флоком</h3>
 				<p class="sub-title">
-	Один из универсальных методов нанесения изображения на ткань, практически на зависящий от состава и плотности ткани. На современных производствах выполняется с помощью компьютера и вышивальных машин. В компьютерной программе задаются все параметры изображения: размеры рисунка, количество цветов, плотность застила и др.
+	Метод печати, основанный на термопереносе специальных пленок, предварительно вырезанных на плоттере. Флекс создает различные гладкие изображения (серебристые, золотистые, цветные и т.п.), а флок — «бархатистые».
 
-	Вышитые изображения получаются фактурными, яркими и долговечными.
+	Пленки могут быть с различными эффектами:
 
-	Ткани с высокой плотностью позволяют сделать и очень плотную вышивку, и даже объемную с использованием PUFF материалов. Если вышивка непосредственно на изделии невозможна, то изображение сначала вышивают на подходящей для этого ткани, получая шеврон, а затем пришивают на изделие. При этом, стоит отметить, что шеврон имеет более «презентабельный» вид. Нанесение принта с помощью вышивки:
+	-металлизированные пленки (золото, серебро, бронза и т.п.);
+	-голографические и светоотражающие;
+	-пленки с тканевой фактурой (например, джинса);
+	-пленки «под кожу» (леопард, змея и др.);
+	-глиттерные;
+	-хамелеоны, которые меняют цвет от освещения;
+	-флок (с приятной «бархатистой» фактурой).
+
+В основном используется для нанесения одноцветных принтов, надписей и переменных личных данных (фамилий, номеров).
+Принт получается путем вырезания элементов изображения на двухсторонней термопленке и дальнейшего вычищения ненужных элементов. Затем с помощью термопресса изображения переносятся на текстиль.
+
+ Печать флексом и флоком:
 
 	— подходит для тиражей от 1 шт.;
 
-	— позволяет получить высококачественное и износостойкое изображение.</p>
+	— наносится как на хлопок, так и на синтетику (кроме курток и ветровок с пропиткой и изделий из нейлона);
+
+	— выдерживает до 40 стирок.</p>
 			</div>
 		</div>
 	<!-- </div> -->
