--- a/vishivka/shevron.html
+++ b/vishivka/shevron.html
@@ -77,13 +77,13 @@
 			<h2 class="title">Услуги</h2>
 			<a href="index.html" class="title__link social-link">Главная</a>
 			<span class="title__link-defis">~</span>
-			<a href="services.html" class="title__link social-link">Вышивка</a>
+			<a href="shevron.html" class="title__link social-link">Шеврон</a>
 		</div>
 		<div class="row">
 			<div class="col-3">
 				<ul class="services-list">
 					<li class="services-list-item">
-						<a href="services.html" class="social-link social-link_active services-list__link">Вышивка</a>
+						<a href="services.html" class="social-link services-list__link">Вышивка</a>
 					</li>
 					<li class="services-list-item">
 						<a href="flex-flok.html" class="social-link services-list__link">Печать флексом, флоком</a>
@@ -92,23 +92,41 @@
 						<a href="sublimacion.html" class="social-link services-list__link">Сублимационная печать</a>
 					</li>
 					<li class="services-list-item">
-						<a href="shevron.html" class="social-link services-list__link">Шеврон</a>
+						<a href="shevron.html" class="social-link social-link_active services-list__link">Шеврон</a>
 					</li>
 				</ul>
 			</div>
 			<div class="col-8 offset-1">
-				<img class="right-img" src="img/vishivka.jpg" alt="Вышивка">
-				<h3 class="title title__right-block">Вышивка</h3>
+				<img class="right-img" src="img/shevron.jpg" alt="Вышивка">
+				<h3 class="title title__right-block">Шеврон</h3>
 				<p class="sub-title">
-	Один из универсальных методов нанесения изображения на ткань, практически на зависящий от состава и плотности ткани. На современных производствах выполняется с помощью компьютера и вышивальных машин. В компьютерной программе задаются все параметры изображения: размеры рисунка, количество цветов, плотность застила и др.
+Шеврон (нашивка) — это тканевый отрезок различной формы с нанесенным изображением.
 
-	Вышитые изображения получаются фактурными, яркими и долговечными.
+	Типы шевронов в зависимости от технологии изображения:
 
-	Ткани с высокой плотностью позволяют сделать и очень плотную вышивку, и даже объемную с использованием PUFF материалов. Если вышивка непосредственно на изделии невозможна, то изображение сначала вышивают на подходящей для этого ткани, получая шеврон, а затем пришивают на изделие. При этом, стоит отметить, что шеврон имеет более «презентабельный» вид. Нанесение принта с помощью вышивки:
+1) Сублимационные
 
-	— подходит для тиражей от 1 шт.;
+	В качестве основы выступает габардин или фетр, на который с помощью сублимации чаще всего наносится полноцветное изображение.
 
-	— позволяет получить высококачественное и износостойкое изображение.</p>
+2) Вышитые
+
+	Изображение вышивается специальными износостойкими нитями. Данный тип подходит для множества логотипов и текстовой информации.
+
+	Также шевроны могут различаться по способу крепления к основе:
+
+	- Пришивные. Шеврон с помощью обметки по периметру крепится к одежде или изделию;
+
+	- Клеевые. Шеврон с помощью промежуточного материала (клеевой ленты) приклеивается к одежде или изделию;
+
+	- На липучке (контактной ленте). Такой тип крепления чаще всего используется для униформы военных или специальных служб.
+
+Преимущества применения шевронов:
+
+	— могут использоваться для тиражей от 1 шт.;
+
+	— шеврон имеет презентабельный внешний вид;
+
+	— получается высококачественное и износостойкое изображение, которое не теряет внешний вид годами.</p>
 			</div>
 		</div>
 	<!-- </div> -->
