--- a/vishivka/about.html
+++ b/vishivka/about.html
@@ -27,11 +27,11 @@
 			 			<div class="col-3 offset-7">
 			 				<div class="social">
 
-			 					<a class="social-link__whatsapp" href="wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
+			 					<a class="social-link__whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
 
-			 					<a class="social-link__vk" href="vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
+			 					<a class="social-link__vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
 
-			 					<a class="social-link__instagram" href="instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
+			 					<a class="social-link__instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
 
 			 					<a href="#" class="social-link social__btn popup-btn">Заказать</a>
 
@@ -92,7 +92,7 @@
 							<li class="about__item"> - Свое производство</li>
 							<li class="about__item"> - Оперативность (в расчетах, сроках, ответах)</li>
 							<li class="about__item"> - Индивидуальный подход</li>
-							<li class="about__item"> - Сами занимаемся разработкой дизайнов вышивки, что позволяет создавать и дорабатывать макеты по вашим пожеланиям.</li>
+							<li class="about__item"> - Сами занимаемся разработкой дизайнов вышивки, что позволяет https://создавать и дорабатывать макеты по вашим пожеланиям.</li>
 							<li class="about__item"> - Доступные цены.</li>
 							<li class="about__item"> - Заказы от 1 ед.</li>
 						</ul>
@@ -111,11 +111,11 @@
 						<div class="footer-block">
 							<a href="tel:89122913917" class="social-link footer__link ">8 (912) 291 39 17</a>
 						
-							<a class="social-link_footer social-link__whatsapp" href="wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
+							<a class="social-link_footer social-link__whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
 		
-							<a class="social-link_footer social-link__vk" href="vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
+							<a class="social-link_footer social-link__vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
 		
-							<a class="social-link_footer social-link__instagram" href="instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
+							<a class="social-link_footer social-link__instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
 						</div>
 
 					</div>
