--- a/vishivka/index.html
+++ b/vishivka/index.html
@@ -27,11 +27,11 @@
 		 			<div class="col-3 offset-7">
 		 				<div class="social">
 
-		 					<a class="social-link__whatsapp" href="wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
+		 					<a class="social-link__whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
 
-		 					<a class="social-link__vk" href="vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
+		 					<a class="social-link__vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
 
-		 					<a class="social-link__instagram" href="instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
+		 					<a class="social-link__instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
 
 		 					<a href="#" class="social-link social__btn popup-btn">Заказать</a>
 
@@ -107,11 +107,11 @@
 					<div class="footer-block">
 						<a href="tel:89122913917" class="social-link footer__link ">8 (912) 291 39 17</a>
 					
-						<a class="social-link_footer social-link__whatsapp" href="wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
+						<a class="social-link_footer social-link__whatsapp" href="https://wa.me/79126833062?text=Здравствуйте%2C+я+хочу+заказать+вышивку" target="_blank"><i class="fi fi-brands-whatsapp"></i></a>
 	
-						<a class="social-link_footer social-link__vk" href="vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
+						<a class="social-link_footer social-link__vk" href="https://vk.com/vishivka__196" target="_blank"><i class="fi fi-brands-vk"></i></a>
 	
-						<a class="social-link_footer social-link__instagram" href="instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
+						<a class="social-link_footer social-link__instagram" href="https://instagram.com/vishivka_196?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fi fi-brands-instagram"></i></a>
 					</div>
 
 				</div>
